move reaction in config file

--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,8 @@
   "prefix" : "=",
   "useFakeID" : false,
   "masterRoleName" : "Score Master",
-  "playersRoleName" : "@everyone"
+  "playersRoleName" : "@everyone",
+  "reactionScoreUpdate" : "👍",
+  "reactionFeedbackSucess" : "😄",
+  "reactionFeedbackFail" : "🥺"
 }
