Move Auth in auth.json file

--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,9 @@
 {
-  "token"  : "Token",
   "prefix" : "=",
   "useFakeID" : false,
   "masterRoleName" : "Score Master",
   "playersRoleName" : "@everyone",
   "reactionScoreUpdate" : "👍",
   "reactionFeedbackSucess" : "😄",
-  "reactionFeedbackFail" : "🥺",
-  "tenorKey": "KEY"
+  "reactionFeedbackFail" : "🥺"
 }
