--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "chartjs-node-canvas": "^3.0.6",
     "chartjs-plugin-datalabels": "^0.7.0",
     "discord": "^0.8.2",
-    "discord.js": "^12.1.1",
+    "discord.js": "^12.3.1",
+    "package.json": "^2.0.1",
     "tenorjs": "^1.0.7"
   },
   "scripts": {
