--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "tenorjs": "^1.0.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
